# ICRA-2025-QRC

./: README.kr.md  README.md
ICRA-2025-QRC/: README.md
ICRA-2025-QRC/teamgrit_agent_msgs/: CMakeLists.txt  package.xml
ICRA-2025-QRC/teamgrit_agent_msgs/msg/: AgentControl.msg
ICRA-2025-QRC/teamgrit_agent_sdk/config/: request.yaml
teamgrit_agent_receiver/: CMakeLists.txt  package.xml
teamgrit_agent_receiver/config/: config.yaml
teamgrit_agent_receiver/src/: teamgrit_agent_receiver.cpp
teamgrit_agent_sdk/: CMakeLists.txt  package.xml
teamgrit_agent_sdk/config/: config.yaml
teamgrit_agent_sdk/src/: teamgrit_agent_sdk.cpp
